added some sounds

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -142,8 +142,7 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/Maps/screenshot_map
 
 [AssetEditorManager]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/WaterPlane/Ocean/Blueprint/BP_OceanWater.BP_OceanWater
+CleanShutdown=False
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=180.000
@@ -867,7 +866,7 @@ bUseUnsortedMenus=False
 
 [LandscapeEdit]
 ToolStrength=1.000000
-BrushRadius=588.155396
+BrushRadius=177.000000
 AlphaBrushAutoRotate=True
 WorldSpacePatternBrushSettings.Origin=X=0.000 Y=0.000
 WorldSpacePatternBrushSettings.bCenterTextureOnOrigin=False
@@ -884,9 +883,11 @@ MirrorOp=0
 NewLandscapeMaterialName=
 ImportLandscape_AlphamapType=0
 ShowUnusedLayers=True
+BrushFalloff=0.428571
+RainAmount=181
 
 [FoliageEdit]
-Radius=8192.000000
+Radius=253.524902
 PaintDensity=1.000000
 WindowPosition=-1,-1,284,400
 bFilterFoliage=True
@@ -905,17 +906,21 @@ BlockingVolume=BlockingVolume.Collision.Collision,
 LastLogListing=MapCheck
 
 [ContentBrowserRecent]
-MRUItem0=/Game/WaterPlane/Ocean/Blueprint/BP_OceanWater
-MRUItem1=/Game/StarterContent/Materials/M_Water_Lake
-MRUItem2=/Game/StarterContent/Materials/M_Water_Ocean
-MRUItem3=/Game/Backdrop
-MRUItem4=/Game/Landscape
-MRUItem5=/Game/Maps/screenshot_map
-MRUItem6=/Game/Grass
-MRUItem7=/Game/Grass1
-MRUItem8=/Game/Meshes/Grass/SM_grass_patch6
-MRUItem9=/Game/NewCurveLinearColorAtlas
-MRUItem10=/Game/WaterMaterials/Meshes/SM_Rapids
+MRUItem0=/Game/Landscape
+MRUItem1=/Game/StreamAttenuation
+MRUItem2=/Game/OceanAttenuation
+MRUItem3=/Game/AmbientSoundClass
+MRUItem4=/Game/ambient
+MRUItem5=/Game/WaterPlane/Ocean/Blueprint/BP_OceanWater
+MRUItem6=/Game/StarterContent/Materials/M_Water_Lake
+MRUItem7=/Game/StarterContent/Materials/M_Water_Ocean
+MRUItem8=/Game/Backdrop
+MRUItem9=/Game/Maps/screenshot_map
+MRUItem10=/Game/Grass
+MRUItem11=/Game/Grass1
+MRUItem12=/Game/Meshes/Grass/SM_grass_patch6
+MRUItem13=/Game/NewCurveLinearColorAtlas
+MRUItem14=/Game/WaterMaterials/Meshes/SM_Rapids
 
 [DetailCategories]
 PlayerStart.TransformCommon=True
@@ -1322,6 +1327,78 @@ LightmassImportanceVolume.TransformCommon=True
 LightmassImportanceVolume.Replication=True
 LightmassImportanceVolume.BrushSettings=True
 LightmassImportanceVolume.Actor=True
+AmbientSound.TransformCommon=True
+AmbientSound.Sound=True
+AmbientSound.Attenuation=True
+AmbientSound.Modulation=True
+AmbientSound.Filter=True
+AmbientSound.Attachment=True
+AmbientSound.AttenuationDistance=True
+AmbientSound.Concurrency=True
+AmbientSound.AttenuationSpatialization=True
+AmbientSound.AttenuationAirAbsorption=True
+AmbientSound.AttenuationListenerFocus=True
+AmbientSound.Tags=True
+AmbientSound.AttenuationOcclusion=True
+AmbientSound.Activation=True
+AmbientSound.Cooking=True
+AmbientSound.Rendering=True
+AmbientSound.Replication=True
+AmbientSound.Actor=True
+SoundCue.Attenuation=True
+SoundCue.AttenuationDistance=True
+SoundCue.Culling=True
+SoundCue.AttenuationSpatialization=True
+SoundCue.AttenuationAirAbsorption=True
+SoundCue.Sound=True
+SoundCue.AttenuationListenerFocus=True
+SoundCue.AttenuationOcclusion=True
+SoundCue.Subtitles=True
+SoundCue.Debug=True
+SoundCue.Voice Management=True
+SoundCue.Effects=True
+SoundCue.Info=True
+SoundCue.Modulation=True
+SoundClass.SoundClass=True
+SoundAttenuation.AttenuationDistance=True
+SoundAttenuation.AttenuationSpatialization=True
+SoundAttenuation.AttenuationAirAbsorption=True
+SoundAttenuation.AttenuationListenerFocus=True
+SoundAttenuation.AttenuationOcclusion=True
+CameraActor.TransformCommon=True
+CameraActor.CameraSettings=True
+CameraActor.CameraOptions=True
+CameraActor.AutoPlayerActivation=True
+CameraActor.StaticMesh=True
+CameraActor.PostProcess=True
+CameraActor.Tags=True
+CameraActor.Activation=True
+CameraActor.Cooking=True
+CameraActor.Replication=True
+CameraActor.Actor=True
+DefaultPawn.TransformCommon=True
+DefaultPawn.StaticMesh=True
+DefaultPawn.Materials=True
+DefaultPawn.Pawn=True
+DefaultPawn.FloatingPawnMovement=True
+DefaultPawn.NavMovement=True
+DefaultPawn.Physics=True
+DefaultPawn.Velocity=True
+DefaultPawn.Collision=True
+DefaultPawn.PlanarMovement=True
+DefaultPawn.MovementComponent=True
+DefaultPawn.Lighting=True
+DefaultPawn.Tags=True
+DefaultPawn.Rendering=True
+DefaultPawn.Activation=True
+DefaultPawn.Cooking=True
+DefaultPawn.Shape=True
+DefaultPawn.Navigation=True
+DefaultPawn.VirtualTexture=True
+DefaultPawn.Camera=True
+DefaultPawn.Replication=True
+DefaultPawn.Input=True
+DefaultPawn.Actor=True
 
 [AssetEditorToolkitTabLocation]
 /Game/WaterMaterials/Meshes/SM_Rapids.SM_Rapids=1
@@ -1332,8 +1409,13 @@ LightmassImportanceVolume.Actor=True
 /Game/StarterContent/Materials/M_Water_Ocean.M_Water_Ocean=1
 /Game/StarterContent/Materials/M_Water_Lake.M_Water_Lake=1
 /Game/WaterPlane/Ocean/Blueprint/BP_OceanWater.BP_OceanWater=1
+/Game/OceanAttenuation.OceanAttenuation=1
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.DefaultPawn;
+RecentlyPlaced=/Script/Engine.CameraActor;/Engine/Transient.ActorFactoryCameraActor_0
+RecentlyPlaced=/Script/Engine.AmbientSound;/Engine/Transient.ActorFactoryAmbientSound_0
+RecentlyPlaced=/Game/WaterMaterials/Meshes/SM_Waterfall_Base.SM_Waterfall_Base;
 RecentlyPlaced=/Game/WaterPlane/Environment/Props/SM_Rock.SM_Rock;
 RecentlyPlaced=/Script/Engine.BlockingVolume;/Engine/Transient.ActorFactoryBoxVolume_6
 RecentlyPlaced=/Script/Engine.WindDirectionalSource;
@@ -1350,8 +1432,6 @@ RecentlyPlaced=/Game/WoodenCabinObj.WoodenCabinObj;
 RecentlyPlaced=/Game/windmill.windmill;
 RecentlyPlaced=/Game/windmill_spec.windmill_spec;
 RecentlyPlaced=/Game/windmill_normal.windmill_normal;
-RecentlyPlaced=/Game/windmill_diffuse.windmill_diffuse;
-RecentlyPlaced=/Game/WaterMaterials/Meshes/SM_Cliff.SM_Cliff;
 
 [/Script/MeshPaintMode.PaintModeSettings]
 VertexPaintSettings=(MeshPaintMode=PaintColors,PaintColor=(R=1.000000,G=1.000000,B=1.000000,A=1.000000),EraseColor=(R=0.000000,G=0.000000,B=0.000000,A=1.000000),bWriteRed=True,bWriteGreen=True,bWriteBlue=True,bWriteAlpha=False,TextureWeightType=AlphaLerp,PaintTextureWeightIndex=TextureOne,EraseTextureWeightIndex=TextureTwo,bPaintOnSpecificLOD=False,LODIndex=0)
@@ -1528,6 +1608,6 @@ OnlyBuildVisibility=False
 bHideUnrelatedNodes=False
 
 [SelectionDetails]
-PreserveScaleRatio=True
+PreserveScaleRatio=False
 
 
