added some more touches

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -866,7 +866,7 @@ bUseUnsortedMenus=False
 
 [LandscapeEdit]
 ToolStrength=1.000000
-BrushRadius=177.000000
+BrushRadius=214.545212
 AlphaBrushAutoRotate=True
 WorldSpacePatternBrushSettings.Origin=X=0.000 Y=0.000
 WorldSpacePatternBrushSettings.bCenterTextureOnOrigin=False
@@ -883,11 +883,12 @@ MirrorOp=0
 NewLandscapeMaterialName=
 ImportLandscape_AlphamapType=0
 ShowUnusedLayers=True
-BrushFalloff=0.428571
+BrushFalloff=0.000000
 RainAmount=181
+NoiseScale=256.000000
 
 [FoliageEdit]
-Radius=253.524902
+Radius=253.525879
 PaintDensity=1.000000
 WindowPosition=-1,-1,284,400
 bFilterFoliage=True
@@ -903,18 +904,18 @@ LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
 BlockingVolume=BlockingVolume.Collision.Collision,
 
 [MessageLog]
-LastLogListing=MapCheck
+LastLogListing=LightingResults
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Landscape
+MRUItem0=/Game/Backdrop
 MRUItem1=/Game/StreamAttenuation
-MRUItem2=/Game/OceanAttenuation
-MRUItem3=/Game/AmbientSoundClass
-MRUItem4=/Game/ambient
-MRUItem5=/Game/WaterPlane/Ocean/Blueprint/BP_OceanWater
-MRUItem6=/Game/StarterContent/Materials/M_Water_Lake
-MRUItem7=/Game/StarterContent/Materials/M_Water_Ocean
-MRUItem8=/Game/Backdrop
+MRUItem2=/Game/Landscape
+MRUItem3=/Game/OceanAttenuation
+MRUItem4=/Game/AmbientSoundClass
+MRUItem5=/Game/ambient
+MRUItem6=/Game/WaterPlane/Ocean/Blueprint/BP_OceanWater
+MRUItem7=/Game/StarterContent/Materials/M_Water_Lake
+MRUItem8=/Game/StarterContent/Materials/M_Water_Ocean
 MRUItem9=/Game/Maps/screenshot_map
 MRUItem10=/Game/Grass
 MRUItem11=/Game/Grass1
@@ -1399,6 +1400,11 @@ DefaultPawn.Camera=True
 DefaultPawn.Replication=True
 DefaultPawn.Input=True
 DefaultPawn.Actor=True
+MeshMergingSettingsObject.MeshSettings=True
+MeshMergingSettingsObject.MaterialSettings=True
+MeshMergingSettingsObject.LandscapeCulling=True
+MeshProxySettingsObject.ProxySettings=True
+MeshInstancingSettingsObject.Instancing=True
 
 [AssetEditorToolkitTabLocation]
 /Game/WaterMaterials/Meshes/SM_Rapids.SM_Rapids=1
@@ -1410,8 +1416,12 @@ DefaultPawn.Actor=True
 /Game/StarterContent/Materials/M_Water_Lake.M_Water_Lake=1
 /Game/WaterPlane/Ocean/Blueprint/BP_OceanWater.BP_OceanWater=1
 /Game/OceanAttenuation.OceanAttenuation=1
+/Game/StreamAttenuation.StreamAttenuation=1
+/Game/Backdrop.Backdrop=1
 
 [PlacementMode]
+RecentlyPlaced=/Script/NavigationSystem.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_0
+RecentlyPlaced=/Script/NavigationSystem.NavModifierVolume;/Engine/Transient.ActorFactoryBoxVolume_1
 RecentlyPlaced=/Script/Engine.DefaultPawn;
 RecentlyPlaced=/Script/Engine.CameraActor;/Engine/Transient.ActorFactoryCameraActor_0
 RecentlyPlaced=/Script/Engine.AmbientSound;/Engine/Transient.ActorFactoryAmbientSound_0
@@ -1422,7 +1432,6 @@ RecentlyPlaced=/Script/Engine.WindDirectionalSource;
 RecentlyPlaced=/Game/WaterPlane/Ocean/Blueprint/BP_OceanWater.BP_OceanWater;
 RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
-RecentlyPlaced=/Script/NavigationSystem.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_0
 RecentlyPlaced=/Game/VirtualRealityBP/Blueprints/MotionControllerPawn.MotionControllerPawn;
 RecentlyPlaced=/Game/VirtualRealityBP/Blueprints/HMDLocomotionPawn.HMDLocomotionPawn;
 RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
@@ -1431,7 +1440,6 @@ RecentlyPlaced=/Game/Meshes/Trees/SM_tree7.SM_tree7;
 RecentlyPlaced=/Game/WoodenCabinObj.WoodenCabinObj;
 RecentlyPlaced=/Game/windmill.windmill;
 RecentlyPlaced=/Game/windmill_spec.windmill_spec;
-RecentlyPlaced=/Game/windmill_normal.windmill_normal;
 
 [/Script/MeshPaintMode.PaintModeSettings]
 VertexPaintSettings=(MeshPaintMode=PaintColors,PaintColor=(R=1.000000,G=1.000000,B=1.000000,A=1.000000),EraseColor=(R=0.000000,G=0.000000,B=0.000000,A=1.000000),bWriteRed=True,bWriteGreen=True,bWriteBlue=True,bWriteAlpha=False,TextureWeightType=AlphaLerp,PaintTextureWeightIndex=TextureOne,EraseTextureWeightIndex=TextureTwo,bPaintOnSpecificLOD=False,LODIndex=0)
@@ -1455,6 +1463,7 @@ MaterialExpressionLandscapeLayerBlend="\"Object.Layers\" \"Object.Layers.Layers[
 MaterialExpression=
 BlockingVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 LightmassImportanceVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+StaticMeshActor=
 
 [FBX_Import_UI_Option_FbxStaticMeshImportData]
 StaticMeshLODGroup=None
@@ -1603,6 +1612,7 @@ bSCCUseGlobalSettings=False
 OnlyBuildSelected=False
 OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
+ShowLightingBuildInfo=True
 
 [/Script/UnrealEd.BlueprintEditorOptions]
 bHideUnrelatedNodes=False
